# guixin

./: .gitignore  .npmrc.mirror  .prettierignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/client/src-tauri/: .lintstagedrc.js  Cargo.toml  README.md  clippy.toml  diesel.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: create-contact-capability.json  default.json  images.json
apps/client/src-tauri/docs/: ai_contact_creation_flow.md  backend-architecture.md  chat_get_messages_flow.md  chat_get_user_chats_flow.md  chat_send_message_flow.md  contact_group_create_flow.md
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/migrations/2025-03-15-020311_init/: down.sql  up.sql
apps/client/src-tauri/prisma/: README.md  schema.md  schema.prisma
apps/client/src-tauri/src/: db.rs  lib.rs  models.rs  schema.rs
apps/client/src-tauri/src/commands/: agent_commands.rs  app_commands.rs  chat_commands.rs  contact_commands.rs  contact_group_commands.rs  contact_user_link_commands.rs  message_commands.rs  mod.rs  resource_commands.rs  user_commands.rs  user_contact_commands.rs
apps/client/src-tauri/src/repositories/: agent_repository.rs  attachment_repository.rs  chat_participant_repository.rs  chat_repository.rs  contact_group_repository.rs  contact_repository.rs  contact_user_link_repository.rs  conversation_repository.rs  error.rs  message_receipt_repository.rs  message_repository.rs  mod.rs  resource_repository.rs  user_contact_repository.rs  user_repository.rs
apps/client/src-tauri/src/services/: agent_service.rs  (+8 more)
(+362 files in other folders)
