[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Diesel ORM 核心
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
# SQLite 系统库，使用 bundled 特性可以避免系统依赖
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
# 用于处理数据库连接池
r2d2 = "0.8.10"
# 用于处理路径
dirs = "5.0.1"
# 用于处理错误
anyhow = "1.0.75"
# 用于处理迁移
diesel_migrations = "2.1.0"
thiserror = "2.0.12"
uuid = { version = "1.12.0", features = ["v4"] }
# 添加 chrono 依赖
chrono = { version = "0.4.31", features = ["serde"] }
